--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
 <body>
   <header>
+    
     <nav class="nav-cabecalho">
-      <div class="morbus"><a href="#">Morbus</a></div>
+      <div class="morbus-cab"><a href="#">Morbus</a></div>
       <div class="conteudo"><a href="#">Conteúdo</a></div>
       <div class="atividades"><a href="./quiz/quiz.html">Atividades</a></div>
       <div class="playlist"><a href="https://youtu.be/LYBG9bSDJ2Q?si=UFIwoGk3dbBVIgc-">Playlist</a></div>
@@ -31,7 +32,9 @@
         </div>
         <button class="botao-pergunta">
           <form action="pergunta usuario">
-            <input type="text" placeholder="Qual a sua pergunta?" id="pergunta-usuario" />
+            <input type="text" placeholder="Qual a sua pergunta?" 
+             id="pergunta-usuario" />
+
           </form>
         </button>
         <img src="./imagens/caveirinha-certa.png" alt="caveira" />
@@ -39,7 +42,7 @@
 
     </section>
     <section class="p2">
-      <h1 class="respiratorio">Virus: Sistema Respiratório</h1>
+      <h1 class="respiratorio">Vírus: Sistema Respiratório</h1>
       <div class="geral-2">
         <div class="corona">
           <img src="./imagens/covid.png" alt="" />
@@ -135,17 +138,7 @@
               vida orgânica
             </p>
           </div>
-          <div class="capsideo">
-            <h2>Capsídeo:</h2>
-            <p>
-              A estrutura de um vírus consiste em uma cobertura proteica
-              (capsídio) que envolve um ácido nucleico, o qual pode ser DNA,
-              RNA ou, mais raramente, os dois.
-            </p>
-          </div>
-        </div>
-        <img id="centrovirus" src="./imagens/virinhocentro.png" alt="imagem estrutura do virus" />
-        <div class="textos-baixo">
+
           <div class="lipidio">
             <h2>Lipídios:</h2>
             <p>
@@ -154,6 +147,17 @@
               álcool, éter e acetona. Também chamados lípidos ou lipídeos,
               essas biomoléculas são compostas por carbono, oxigênio e
               hidrogênio.
+            </p>
+          </div>
+        </div>
+        <img id="centrovirus" src="./imagens/virinhocentro.png" alt="imagem estrutura do virus" />
+        <div class="textos-baixo">
+          <div class="capsideo">
+            <h2>Capsídeo:</h2>
+            <p>
+              A estrutura de um vírus consiste em uma cobertura proteica
+              (capsídio) que envolve um ácido nucleico, o qual pode ser DNA,
+              RNA ou, mais raramente, os dois.
             </p>
           </div>
           <div class="envelope">
@@ -170,7 +174,7 @@
       </div>
     </section>
     <section class="p4">
-      <h1 class="digestorio">Virus: Sistema Digestório</h1>
+      <h1 class="digestorio">Vírus: Sistema Digestório</h1>
       <div class="geral-4">
         <div class="arbovirus">
           <img id="herpebolinha" src="./imagens/herpe.png" alt="" />
@@ -315,7 +319,7 @@
     </section>
     <section class="p6">
       <div class="geral-6">
-        <div class="morbus-p6"><a href="#">Morbus</a></div>
+        <div class="morbus-p6"><a href="#">morbus</a></div>
         <div class="botao-atividade">
           <a href="./quiz/quiz.html"><button>Atividades</button></a>
         </div>
@@ -327,7 +331,7 @@
     </section>
     <section class="p7" id="contato">
       <div class="geral-7">
-        <div class="morbus-p7"> <a href="#">Morbus</a> </div>
+        <div class="morbus-p7"> <a href="#">morbus</a> </div>
          <h2>Dúvidas e sugestões</h2>
         <div class="centro">
          
