--- a/curiosidades/curiosidade.html
+++ b/curiosidades/curiosidade.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="curiosidades.css">
     <script src="./script.js" type="module" defer></script>
-    <title>edutec quiz</title>
+    <title>edutec</title>
 </head>
 <body>
     <a href="../index.html" class="botao-voltar">
