--- a/quiz/perguntas/perguntas.html
+++ b/quiz/perguntas/perguntas.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 
-<head>
+<head><div class="container">>
     <link rel="stylesheet" href="perguntas.css">
     <script src="./perguntas.js" type="module" defer></script>
     <script src="../dadosniveis/data.js" type="module" defer></script>
@@ -18,10 +18,6 @@
 <body>
     <main>
 
-        <div class="quiz-container">
-
-
-        
         </div>
     </main>
 </body>
