--- a/quiz/resultado/resultado.html
+++ b/quiz/resultado/resultado.html
@@ -2,13 +2,13 @@
 <html lang="pt-BR">
 <head>
     <link rel="stylesheet" href="resultado.css">
-    <script src="./script.js" type="module" defer></script>
+    <script src="./resultado.js" type="module" defer></script>
     <title>edutec quiz</title>
 </head>
 <body>
     <div class="fim">
         <h1>Parabéns fera!</h1>
-        <p>Você acertou 7 questões</p> 
+        <p class="pontos-inserir"></p> 
             
         <div class="botoes">
          <a href="../quiz.html" class="rcm">RECOMEÇAR</a>
