--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <nav class="nav-cabecalho">
       <div class="morbus-cab"><a href="#">Morbus</a></div>
-      <div class="conteudo"><a href="#">Conteúdo</a></div>
+      <div class="botao-conteudo"><a href="#">Conteúdo</a></div>
       <div class="atividades"><a href="./quiz/quiz.html">Atividades</a></div>
       <div class="playlist"><a href="https://youtu.be/LYBG9bSDJ2Q?si=UFIwoGk3dbBVIgc-">Playlist</a></div>
       <div class="contato"><a href="#contato">Contato</a></div>
@@ -22,6 +22,12 @@
   </header>
   <main>
     <section class="p1">
+      <div class="caixa-conteudo">
+        <a href="#p2"><button>Vírus: Sistema Respiratório</button></a>
+        <a href="#p3"><button>Estrutura do Vírus</button></a>
+        <a href="#p4"><button>Vírus: Sistema Digestório</button></a>
+        <a href="#p5"><button>Vírus no Corpo</button></a>
+      </div>
       <div class="geral">
         <div class="titulo-texto">
           <h1 class="titulo-morbus">Morbus</h1>
@@ -41,7 +47,7 @@
       </div>
 
     </section>
-    <section class="p2">
+    <section class="p2" id="p2">
       <h1 class="respiratorio">Vírus: Sistema Respiratório</h1>
       <div class="geral-2">
         <div class="corona">
@@ -126,7 +132,7 @@
         </p>
       </div>
     </section>
-    <section class="p3">
+    <section class="p3" id="p3">
       <div class="geral-3">
         <div class="textos-cima">
           <div class="material">
@@ -173,7 +179,7 @@
         </div>
       </div>
     </section>
-    <section class="p4">
+    <section class="p4" id="p4">
       <h1 class="digestorio">Vírus: Sistema Digestório</h1>
       <div class="geral-4">
         <div class="arbovirus">
@@ -268,7 +274,7 @@
         </p>
       </div>
     </section>
-    <section class="p5">
+    <section class="p5" id="p5">
       <img class="corpo-original" src="./imagens/corpinho.png" alt="" />
       <h2 class="paravermais">Passe o mouse em cima para ver mais</h2>
       <div class="popup">
