--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
     </section>
     <section class="p6">
       <div class="geral-6">
-        <div class="morbus-p6"><a href="#">morbus</a></div>
+        <div class="morbus-p6"><a href="#">Morbus</a></div>
         <div class="botao-atividade">
           <a href="./quiz/quiz.html"><button>Atividades</button></a>
         </div>
@@ -337,7 +337,7 @@
     </section>
     <section class="p7" id="contato">
       <div class="geral-7">
-        <div class="morbus-p7"> <a href="#">morbus</a> </div>
+        <div class="morbus-p7"> <a href="#">Morbus</a> </div>
          <h2>Dúvidas e sugestões</h2>
         <div class="centro">
          
