--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="morbus-cab"><a href="#">Morbus</a></div>
       <div class="botao-conteudo"><a href="#">Conteúdo</a></div>
       <div class="atividades"><a href="./quiz/quiz.html">Atividades</a></div>
-      <div class="playlist"><a href="https://youtu.be/LYBG9bSDJ2Q?si=UFIwoGk3dbBVIgc-">Playlist</a></div>
+      <div class="playlist"><a href="https://youtube.com/playlist?list=PLy3-IBp6pF5GB6UPt56tCyJrk21dh4Kgv&si=tMDTZ8PM3WMqzPMr" target="_blank">Playlist</a></div>
       <div class="contato"><a href="#contato">Contato</a></div>
     </nav>
   </header>
@@ -357,7 +357,7 @@
             <div class="imgs">
               
               <a href=""><img src="./imagens/insta.png" alt=""></a>
-              <a href="http://discordapp.com/users/1274413495202484369"><img src="./imagens/disc.png" alt=""></a>
+              <a href="http://discordapp.com/users/1274413495202484369" target="_blank"><img src="./imagens/disc.png" alt=""></a>
             </div>
           </div>
         </div>
@@ -370,13 +370,13 @@
           <h2>Mídias da artista 1</h2>
           <div class="midiascredito">
 
-            <a href="https://www.instagram.com/nanami_77m?igsh=MXNlcjMyd2o3eDFmcA=="><img src="./imagens/insta.png" alt=""></a>
+            <a href="https://www.instagram.com/nanami_77m?igsh=MXNlcjMyd2o3eDFmcA=="target="_blank"><img src="./imagens/insta.png" alt=""></a>
           </div>
         </div>
         <div class="artista-2">
           <h2>Mídias da artista 2</h2>
           <div class="midiascredito">
-            <a href="https://www.instagram.com/jucaszsz?igsh=MW9qYTZyZXA4ZHdpMQ=="><img src="./imagens/insta.png" alt=""></a>
+            <a href="https://www.instagram.com/jucaszsz?igsh=MW9qYTZyZXA4ZHdpMQ==" target="_blank"><img src="./imagens/insta.png" alt=""></a>
           </div>
         </div>
       </div>
