--- a/index.html
+++ b/index.html
@@ -37,11 +37,7 @@
           </p>
         </div>
         <button class="botao-pergunta">
-          <form action="pergunta usuario">
-            <input type="text" placeholder="Qual a sua pergunta?" 
-             id="pergunta-usuario" />
-
-          </form>
+         <a href="https://docs.google.com/forms/d/e/1FAIpQLScSjR6lpTt8Jb6H7QIWOGA5ZBULh8HcZte3HHuUMx2TCJGrDg/viewform"target="_blank">Qual sua pergunta?</a>
         </button>
         <img src="./imagens/caveirinha-certa.png" alt="caveira" />
       </div>
@@ -356,7 +352,7 @@
             </h3>
             <div class="imgs">
               
-              <a href=""><img src="./imagens/insta.png" alt=""></a>
+              <a href="https://www.instagram.com/morbus_virus?igsh=anc5a2l6MmpxYjMy&utm_source=qr"target="_blank"><img src="./imagens/insta.png" alt=""></a>
               <a href="http://discordapp.com/users/1274413495202484369" target="_blank"><img src="./imagens/disc.png" alt=""></a>
             </div>
           </div>
